layout bug fixes

--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -24,7 +24,6 @@ body {
 .box {
   background: $box-bg;
   border: 8px solid $background-color;
-  display: table-cell;
 }
 
 .header {
@@ -32,7 +31,6 @@ body {
 }
 
 .weather-widget {
-  width: 400px;
   height: 300px;
   .icon {
     height: 76px;
@@ -52,7 +50,6 @@ body {
 }
 
 .notes {
-  width: 400px;
   height: 300px;
   .note {
     border: 4px solid transparent;
@@ -66,14 +63,7 @@ body {
 }
 
 .clock, .sensors {
-  width: 400px;
   height: 180px;
-  display: block;
-}
-
-.column {
-  width: 400px;
-  float: left;
 }
 
 .clock-container {
